--- a/sloth/pubspec.yaml
+++ b/sloth/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   another_stepper: ^1.1.6
   qr_bar_code_scanner_dialog: ^0.0.5
   draggable_bottom_sheet: ^1.0.2
+  database: ^0.3.3
+  animated_checkmark: ^1.0.1
 
 dev_dependencies:
   flutter_test:
