--- a/sloth/pubspec.yaml
+++ b/sloth/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   draggable_bottom_sheet: ^1.0.2
   database: ^0.3.3
   animated_checkmark: ^1.0.1
-
+  flutter_barcode_scanner: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
