--- a/sloth/pubspec.yaml
+++ b/sloth/pubspec.yaml
@@ -43,11 +43,14 @@ dependencies:
   another_stepper: ^1.1.6
   qr_bar_code_scanner_dialog: ^0.0.5
   draggable_bottom_sheet: ^1.0.2
-  database: ^0.3.3
   animated_checkmark: ^1.0.1
   flutter_barcode_scanner: ^2.0.0
-  
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 dev_dependencies:
+  hive_generator: ^2.0.0
+  build_runner: any
   flutter_test:
     sdk: flutter
 
@@ -73,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/welcome.png
+    - lib/quest_data.json
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
