--- a/sloth/pubspec.yaml
+++ b/sloth/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
   assets:
     - lib/assets/welcome.png
     - lib/quest_data.json
+    - lib/assets/pic.jpg
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
