--- a/sloth/pubspec.yaml
+++ b/sloth/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  liquid_pull_to_refresh: ^3.0.1
 
 dev_dependencies:
   hive_generator: ^2.0.0
