--- a/sloth/pubspec.yaml
+++ b/sloth/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   liquid_pull_to_refresh: ^3.0.1
+  openai_client: ^0.0.4
 
 dev_dependencies:
   hive_generator: ^2.0.0
@@ -79,6 +80,7 @@ flutter:
     - lib/assets/welcome.png
     - lib/quest_data.json
     - lib/assets/pic.jpg
+    - lib/assets/logo.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
